--- a/landing-page.html
+++ b/landing-page.html
@@ -1391,12 +1391,12 @@
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
+                  <a href="./img/photo-gallery/1/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-4">
                     <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
+                  <a href="./img/photo-gallery/1/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-4">
                     <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
@@ -1410,12 +1410,12 @@
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
+                  <a href="./img/photo-gallery/2/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-5">
                     <img src="./img/photo-gallery/2/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
+                  <a href="./img/photo-gallery/2/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-5">
                     <img src="./img/photo-gallery/2/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
@@ -1433,12 +1433,12 @@
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
+                  <a href="./img/photo-gallery/3/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-6">
                     <img src="./img/photo-gallery/3/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
+                  <a href="./img/photo-gallery/3/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-6">
                     <img src="./img/photo-gallery/3/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
@@ -1448,22 +1448,18 @@
 
           <div class="applications-area__item">
 
-            <h3 class="title title--small title--custom">Топография</h3>
-            <p>Используйте RTK-SLAM с CORS для получения облака точек с абсолютными координатами. На территориях без
-              охвата CORS, технология PPK-SLAM может достичь той же точности, соответствующей требованиям
-              топографических карт масштаба 1:500. Совместно с высокоразрешающей панорамной камерой, система
-              обеспечивает дополнительную оценку атрибутов объектов. Используя комплекты, установленные на беспилотники
-              или транспортные средства, крупномасштабные топографические данные могут быть собраны за один раз.</p>
+            <h3 class="title title--small title--custom">Горное дело</h3>
+            <p>Подходит для измерения объема запасов на открытых горных разрезах, топографической съемки горных участков, планирования подземных горных работ, создания поперечных сечений, измерения объема и извлечения линий склона.</p>
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/4/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-7">
+                    <img src="./img/photo-gallery/4/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/4/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-7">
+                    <img src="./img/photo-gallery/4/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
               </ul>
@@ -1472,22 +1468,18 @@
 
           <div class="applications-area__item">
 
-            <h3 class="title title--small title--custom">Топография</h3>
-            <p>Используйте RTK-SLAM с CORS для получения облака точек с абсолютными координатами. На территориях без
-              охвата CORS, технология PPK-SLAM может достичь той же точности, соответствующей требованиям
-              топографических карт масштаба 1:500. Совместно с высокоразрешающей панорамной камерой, система
-              обеспечивает дополнительную оценку атрибутов объектов. Используя комплекты, установленные на беспилотники
-              или транспортные средства, крупномасштабные топографические данные могут быть собраны за один раз.</p>
+            <h3 class="title title--small title--custom">Оценка недвижимости</h3>
+            <p>Удобство и точность ручного сканера LiGrip H300 с технологией SLAM делают его широко применимым для оценки объектов недвижимости, проведения инспекций и инженерного аудита, обеспечивая эффективность измерений в 10 раз выше, чем у традиционных ручных методов</p>
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/5/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-8">
+                    <img src="./img/photo-gallery/5/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/5/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-8">
+                    <img src="./img/photo-gallery/5/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
               </ul>
@@ -1496,22 +1488,18 @@
 
           <div class="applications-area__item">
 
-            <h3 class="title title--small title--custom">Топография</h3>
-            <p>Используйте RTK-SLAM с CORS для получения облака точек с абсолютными координатами. На территориях без
-              охвата CORS, технология PPK-SLAM может достичь той же точности, соответствующей требованиям
-              топографических карт масштаба 1:500. Совместно с высокоразрешающей панорамной камерой, система
-              обеспечивает дополнительную оценку атрибутов объектов. Используя комплекты, установленные на беспилотники
-              или транспортные средства, крупномасштабные топографические данные могут быть собраны за один раз.</p>
+            <h3 class="title title--small title--custom">3D-моделирование / Цифровой архив</h3>
+            <p>Измерения внутренних и наружных конструкций помещений, а также выполнение аэросъемки крыш и высотных зданий, предоставляют подробное облако точек как внутри, так и снаружи объектов. Эти данные служат основой для сохранения исторической архитектуры, обратного моделирования и создания цифровых моделей объектов.</p>
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/6/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-9">
+                    <img src="./img/photo-gallery/6/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/6/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-9">
+                    <img src="./img/photo-gallery/6/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
               </ul>
@@ -1520,22 +1508,18 @@
 
           <div class="applications-area__item">
 
-            <h3 class="title title--small title--custom">Топография</h3>
-            <p>Используйте RTK-SLAM с CORS для получения облака точек с абсолютными координатами. На территориях без
-              охвата CORS, технология PPK-SLAM может достичь той же точности, соответствующей требованиям
-              топографических карт масштаба 1:500. Совместно с высокоразрешающей панорамной камерой, система
-              обеспечивает дополнительную оценку атрибутов объектов. Используя комплекты, установленные на беспилотники
-              или транспортные средства, крупномасштабные топографические данные могут быть собраны за один раз.</p>
+            <h3 class="title title--small title--custom">Сканирование электроэнергетической сети и подстанции</h3>
+            <p>Модель H300 обеспечивает дальность действия до 300 метров, легко получая облака точек линий электропередач и вершин электрических вышек. Превосходная плотность точек обеспечивает более детальное сканирование подстанций, предоставляя более качественную базовую основу для моделирования и навигации.</p>
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/7/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-10">
+                    <img src="./img/photo-gallery/7/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/7/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-10">
+                    <img src="./img/photo-gallery/7/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
               </ul>
@@ -1544,22 +1528,18 @@
 
           <div class="applications-area__item">
 
-            <h3 class="title title--small title--custom">Топография</h3>
-            <p>Используйте RTK-SLAM с CORS для получения облака точек с абсолютными координатами. На территориях без
-              охвата CORS, технология PPK-SLAM может достичь той же точности, соответствующей требованиям
-              топографических карт масштаба 1:500. Совместно с высокоразрешающей панорамной камерой, система
-              обеспечивает дополнительную оценку атрибутов объектов. Используя комплекты, установленные на беспилотники
-              или транспортные средства, крупномасштабные топографические данные могут быть собраны за один раз.</p>
+            <h3 class="title title--small title--custom">Подземные пространства</h3>
+            <p>Наше решение применимо для измерения закрытых пространств, таких как подземные парковки, электрические коридоры, убежища от воздушных нападений и торговые центры. Оно подходит для обследования подземных пространств, сканирования и предоставления навигационных карт для автоматической точной проверки.</p>
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/8/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-11">
+                    <img src="./img/photo-gallery/8/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/8/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-11">
+                    <img src="./img/photo-gallery/8/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
               </ul>
@@ -1568,22 +1548,18 @@
 
           <div class="applications-area__item">
 
-            <h3 class="title title--small title--custom">Топография</h3>
-            <p>Используйте RTK-SLAM с CORS для получения облака точек с абсолютными координатами. На территориях без
-              охвата CORS, технология PPK-SLAM может достичь той же точности, соответствующей требованиям
-              топографических карт масштаба 1:500. Совместно с высокоразрешающей панорамной камерой, система
-              обеспечивает дополнительную оценку атрибутов объектов. Используя комплекты, установленные на беспилотники
-              или транспортные средства, крупномасштабные топографические данные могут быть собраны за один раз.</p>
+            <h3 class="title title--small title--custom">Подземные пространства</h3>
+            <p>Наше решение применимо для измерения закрытых пространств, таких как подземные парковки, электрические коридоры, убежища от воздушных нападений и торговые центры. Оно подходит для обследования подземных пространств, сканирования и предоставления навигационных карт для автоматической точной проверки.</p>
             <div class="photo-gallery">
               <ul class="photo-gallery__list">
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/1.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/9/1.jpg" class="photo-gallery__link" data-fslightbox="gallery-12">
+                    <img src="./img/photo-gallery/9/1.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
                 <li class="photo-gallery__item">
-                  <a href="#" class="photo-gallery__link">
-                    <img src="./img/photo-gallery/1/2.jpg" alt="#" loading="lazy">
+                  <a href="./img/photo-gallery/9/2.jpg" class="photo-gallery__link" data-fslightbox="gallery-12">
+                    <img src="./img/photo-gallery/9/2.jpg" alt="#" loading="lazy">
                   </a>
                 </li>
               </ul>
