--- a/landing-page.html
+++ b/landing-page.html
@@ -509,7 +509,7 @@
                 Камера поддерживает съемные компоненты.</p>
             </div>
             <div class="text-and-image__image">
-              <img src="./img/content-section/1.png" alt="#" loading="lazy">
+              <img src="./img/content-section/1.jpg" alt="#" loading="lazy">
             </div>
           </div>
 
@@ -519,7 +519,7 @@
             <ul class="simple-gallery-four__list">
               <li class="simple-gallery-four__item">
                 <figure>
-                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/1.png" alt="#" loading="lazy">
+                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/1.jpg" alt="#" loading="lazy">
                   <figcaption>Общий вес системы:
                     <b>1,67 кг</b>
                   </figcaption>
@@ -527,19 +527,19 @@
               </li>
               <li class="simple-gallery-four__item">
                 <figure>
-                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/2.png" alt="#" loading="lazy">
+                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/2.jpg" alt="#" loading="lazy">
                   <figcaption>Вес сканера: <b>1,30 кг</b></figcaption>
                 </figure>
               </li>
               <li class="simple-gallery-four__item">
                 <figure>
-                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/3.png" alt="#" loading="lazy">
+                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/3.jpg" alt="#" loading="lazy">
                   <figcaption>Сканер + камера: <b>1,60 кг</b></figcaption>
                 </figure>
               </li>
               <li class="simple-gallery-four__item">
                 <figure>
-                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/4.png" alt="#" loading="lazy">
+                  <img class="simple-gallery-four__image" src="./img/simple-gallery-four/4.jpg" alt="#" loading="lazy">
                   <figcaption>Сканер + штатив: <b>1,37 кг</b></figcaption>
                 </figure>
               </li>
@@ -927,7 +927,7 @@
           <div class="product-card__grid">
             <div class="product-card__grid-column">
               <div class="product-card__photo">
-                <img src="./img/product-card/1.png" alt="#" loading="lazy">
+                <img src="./img/product-card/1.jpg" alt="#" loading="lazy">
               </div>
             </div>
             <div class="product-card__grid-column">
@@ -1190,7 +1190,7 @@
           <div class="product-card__grid">
             <div class="product-card__grid-column">
               <div class="product-card__photo">
-                <img src="./img/product-card/2.png" alt="#" loading="lazy">
+                <img src="./img/product-card/2.jpg" alt="#" loading="lazy">
               </div>
             </div>
             <div class="product-card__grid-column">
@@ -1262,7 +1262,7 @@
           <div class="product-card__grid">
             <div class="product-card__grid-column">
               <div class="product-card__photo">
-                <img src="./img/product-card/3.png" alt="#" loading="lazy">
+                <img src="./img/product-card/3.jpg" alt="#" loading="lazy">
               </div>
             </div>
             <div class="product-card__grid-column">
